<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="newPurchase"
        android:enabled="true"
        android:icon="@drawable/add"
        android:shortcutShortLabel="@string/home_fab">
        <intent
            android:action="org.feup.group4.supermarket.newPurchase"
            android:targetPackage="org.feup.group4.supermarket"
            android:targetClass="org.feup.group4.supermarket.activities.MainActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="receipts"
        android:enabled="true"
        android:icon="@drawable/receipt"
        android:shortcutShortLabel="@string/title_receipts"
        android:shortcutLongLabel="@string/receipts_hello">
        <intent
            android:action="org.feup.group4.supermarket.receipts"
            android:targetPackage="org.feup.group4.supermarket"
            android:targetClass="org.feup.group4.supermarket.activities.MainActivity" />
    </shortcut>
</shortcuts>