<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shopping_cart"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/payment_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:text="@string/money_format"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/payment_current_balance_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/payment_current_balance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_current_balance"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/payment_balance"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/payment_current_balance_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money_format"
        android:textSize="28sp"
        app:layout_constraintBaseline_toBaselineOf="@id/payment_current_balance_text"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/payment_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/payment_balance"
        android:textSize="20sp"
        app:backgroundTint="@color/dark_blue"
        app:layout_constraintBottom_toTopOf="@+id/payment_coupon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payment_total" />

    <TextView
        android:id="@+id/payment_current_coupons_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_current_coupons"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/payment_coupon"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/payment_current_coupons_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_current_coupons_number"
        android:textSize="28sp"
        app:layout_constraintBaseline_toBaselineOf="@id/payment_current_coupons_text"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/payment_coupon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_coupon"
        android:textSize="20sp"
        app:backgroundTint="@color/dark_blue"
        app:layout_constraintBottom_toTopOf="@id/payment_proceed"
        app:layout_constraintTop_toBottomOf="@id/payment_balance" />

    <Button
        android:id="@+id/payment_proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/payment_proceed"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="@color/dark_blue"
        app:icon="@drawable/shopping_cart_checkout"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
