<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.terminal.ProductsFragment"
    android:background="@color/dark_blue">

    <ImageView
        android:id="@+id/home_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/main_card_top_margin"
        android:layout_marginBottom="-50dp"
        android:contentDescription="@string/generate_products_home_background"
        android:src="@drawable/rounded_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/background" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="8dp"
        android:text="@string/products_hello"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/home_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_products_list"
        android:paddingBottom="110dp"
        android:clipToPadding="false"
        tools:itemCount="30"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="@id/home_background"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/empty_recyclerview"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:text="@string/products_empty_recyclerview"
        android:textSize="25sp"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="15dp"
        android:layout_marginHorizontal="15dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/home_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/new_product_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:icon="@drawable/add"
        android:text="@string/products_new_product"
        android:textSize="20sp"
        app:iconTint="#FFFFFF"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>