<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.terminal.ProductsFragment"
    android:background="@color/dark_blue">

    <ImageView
        android:id="@+id/home_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/main_card_top_margin"
        android:layout_marginBottom="-50dp"
        android:contentDescription="@string/checkout_mode_home_background"
        android:src="@drawable/rounded_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/background" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="8dp"
        android:text="@string/checkout_mode"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/home_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:text="Complete your purchase below"
        android:textSize="25sp"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="15dp"
        android:layout_marginHorizontal="15dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/home_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/scan_qr_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:icon="@drawable/qr_code_scanner"
        android:text="@string/scan_qr_code"
        android:textSize="20sp"
        app:iconTint="#FFFFFF"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/dark_blue"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nfc_fab"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/nfc_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:icon="@drawable/nfc"
        android:text="@string/use_nfc"
        android:textSize="20sp"
        app:iconTint="#FFFFFF"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/dark_blue"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/scan_qr_fab"/>


</androidx.constraintlayout.widget.ConstraintLayout>