<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="40dp"
    android:background="@color/dark_blue"
    tools:context=".activities.RegisterActivity">

    <EditText
        android:id="@+id/register_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingVertical="15dp"
        android:hint="@string/onboarding_name"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:backgroundTint="#FFFFFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/register_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/onboarding_email"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:backgroundTint="#FFFFFF"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingVertical="15dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/register_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/onboarding_password"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:backgroundTint="#FFFFFF"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingVertical="15dp"
        android:textSize="20sp"
        android:imeOptions="actionDone"
        android:imeActionLabel="@string/onboarding_register"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/light_blue"
        android:text="@string/onboarding_register"
        android:textColor="#000000"/>

    <ProgressBar
        android:id="@+id/register_spinner"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>