<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".fragments.client.HomeFragment"
            android:background="@color/dark_blue">

            <ImageView
                android:id="@+id/home_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/main_card_top_margin"
                android:layout_marginBottom="-50dp"
                android:contentDescription="Home Background"
                android:src="@drawable/rounded_rectangle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/background" />

            <TextView
                android:id="@+id/home_text_hello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="8dp"
                android:text="@string/home_hello"
                android:textColor="#FFFFFF"
                android:textSize="35sp"
                app:layout_constraintBottom_toTopOf="@id/home_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/home_text_balance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="25dp"
                android:text="@string/home_balance"
                android:textSize="25sp"
                app:layout_constraintEnd_toStartOf="@id/home_text_balance_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/home_background" />

            <TextView
                android:id="@+id/home_text_balance_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:text="@string/price_format"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/home_text_balance" />

            <TextView
                android:id="@+id/home_text_coupons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/home_coupons"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/home_text_balance" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_coupons_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clipToPadding="false"
                android:paddingEnd="15dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/home_text_coupons" />

            <TextView
                android:id="@+id/empty_recyclerview"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_rectangle"
                android:gravity="center"
                android:paddingHorizontal="15dp"
                android:text="@string/home_empty_recyclerview"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:visibility="gone"
                app:backgroundTint="@color/dark_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/home_text_coupons" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/home_new_purchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/home_fab"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:backgroundTint="@color/dark_blue"
                app:icon="@drawable/add"
                app:iconTint="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>